Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                         <p class="share_main-desc">If you enjoyed using these features and think that these were truly helpful, Don't forget to share it with your friends and others. Why would you want them to miss this opportunity, huh? Share it with them and let them thank you as you have found this webpage for them. </p>
                         <br>
                         <p class="link-label">The link is given below:</p>
-                        <a href="www.github.io/Sakib-theDarkNebula/Prime_Numbers_Encyclopedia">Prime Numbers Encyclopedia</a>
+                        <a href="www.github.io/Sakib-theDarkNebula/Prime_Numbers_Encyclopedia/index.html">Prime Numbers Encyclopedia</a>
                         <br>
                         <p class="other-projects-label">Check out my Previous project: </p>
-                        <a href="https://sakib-thedarknebula.github.io/DICESTAR100_Game/" target="_blank">Dice Star</a>
+                        <a href="https://sakib-thedarknebula.github.io/DICESTAR100_Game/index.html" target="_blank">Dice Star</a>
                         <br>
                         <p class="contact-label">For any suggestion or bug report or anything, Contact:</p>
                         <p>sakibulhasan159@gmail.com</p>
