--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <a href="www.github.io/Sakib-theDarkNebula/Prime_Numbers_Encyclopedia/index.html">Prime Numbers Encyclopedia</a>
                         <br>
                         <p class="other-projects-label">Check out my Previous project: </p>
-                        <a href="https://sakib-thedarknebula.github.io/DICESTAR100_Game/index.html" target="_blank">Dice Star</a>
+                        <a href="https://github.com/Sakib-TheDarkNebula/DICE-STAR100---Game/index.html" target="_blank">Dice Star</a>
                         <br>
                         <p class="contact-label">For any suggestion or bug report or anything, Contact:</p>
                         <p>sakibulhasan159@gmail.com</p>
